# A4I-C1

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  deploy.sh  main.py  pyproject.toml  requirements.txt  set_env.sh
agents/: __init__.py  config.py  critique_agent.py  data_agent.py  data_agent_tool.py  insights_agent.py  insights_agent_tool.py  recommender_agent.py  root_agent.py
data/stem/: Advanced Mathematics_ca.parquet  Advanced Placement_ca.parquet  Algebra II_ca.parquet  Algebra I_ca.parquet  Biology_ca.parquet  Calculus_ca.parquet  Chemistry_ca.parquet  Geometry_ca.parquet  Gifted and Talented_ca.parquet  International Baccalaureate_ca.parquet  Physics_ca.parquet  SAT and ACT_ca.parquet
mcp_servers/: __init__.py  config.py  parent_services_server.py
mcp_servers/tools/: __init__.py  school_enrichment.py  school_matcher.py  student_profile.py
mcp_servers/utils/: __init__.py  document_parser.py
static/: index.html
tools/: __init__.py  analysis_tools.py  bigquery_tools.py  response_formatter.py
